<resources>


    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_have_account">Don\'t have an account ?</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="password">Password</string>
    <string name="hint_type_hear">Type Here</string>

    <string name="action_sign_up">Sign Up</string>


    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_tc">Terms and Conditions</string>
    <string name="title_pc">Privacy Policy</string>
    <string name="title_search_country">Country Picker</string>


    <string name="error_email_invalid">Please enter valid email.</string>
    <string name="error_password_length">Minimum password length is 6 </string>
    <string name="error_password_not_matched">Password does not matched </string>
    <string name="error_network_connection_failed">Please check your network connection.</string>


    <string name="label_agree">By submitting, you agree to our</string>
    <string name="label_t_and_c"><![CDATA[Terms & Conditions]]></string>
    <string name="label_and">and</string>
    <string name="label_pp">Privacy Policy</string>
    <string name="label_already_account">Already have an account?</string>
    <string name="label_signin">Sign in</string>

    <string name="info_forgot_password">An email will be sent with a link\n to reset your password</string>
    <string name="reset_password">Reset Password</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_password">Password*</string>
    <string name="hint_email">Email*</string>
    <string name="string_im_looking_service">I am looking for a service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
