<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/layout_registration_form_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_first_name_margin_top"
            android:ems="10"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_title_last_name"
            app:layout_constraintTop_toBottomOf="@+id/text_title_first_name" />

        <TextView
            android:id="@+id/text_title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

        <TextView
            android:id="@+id/text_title_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_title_last_name_margin_top"
            android:text="@string/hint_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_first_name" />

        <TextView
            android:id="@+id/text_title_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_user_avatar" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_title_last_name"
            app:layout_constraintTop_toBottomOf="@+id/text_title_last_name" />


        <TextView
            android:id="@+id/text_title_contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_contact_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_last_name" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_title_contact_number"
            app:layout_constraintTop_toBottomOf="@+id/text_title_contact_number" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_title_email"
            app:layout_constraintTop_toBottomOf="@+id/text_title_email" />


        <TextView
            android:id="@+id/text_title_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <EditText
            android:id="@+id/edit_enter_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_title_password"
            app:layout_constraintTop_toBottomOf="@+id/text_title_password" />

        <TextView
            android:id="@+id/text_title_cpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_enter_password" />

        <EditText
            android:id="@+id/edit_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_title_cpassword"
            app:layout_constraintTop_toBottomOf="@+id/text_title_cpassword" />


        <TextView
            android:id="@+id/text_label_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_submit_margin_top"
            android:text="@string/label_agree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_confirm_password" />

        <TextView
            android:id="@+id/text_label_term_and_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_t_and_c"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_label_and"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_submit" />

        <TextView
            android:id="@+id/text_label_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_and_start"
            android:layout_marginEnd="@dimen/text_and_end"
            android:text="@string/label_and"
            app:layout_constraintEnd_toStartOf="@+id/text_label_privacy_policy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_label_term_and_con"
            app:layout_constraintTop_toBottomOf="@+id/text_label_submit" />

        <TextView
            android:id="@+id/text_label_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_label_and"
            app:layout_constraintTop_toBottomOf="@+id/text_label_submit" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_sign_up_registration_margin_start"
            android:layout_marginTop="@dimen/button_sign_up_registration_margin_top"
            android:layout_marginEnd="@dimen/button_sign_up_registration_margin_end"
            android:text="@string/action_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_term_and_con" />

        <TextView
            android:id="@+id/text_label_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_account_margin_top"
            android:layout_marginBottom="@dimen/text_account_margin_bottom"
            android:text="@string/label_already_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_link_sign_in"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_link_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_sign_in_margin_start"
            android:layout_marginTop="@dimen/text_sign_in_margin_top"
            android:text="@string/label_signin"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_label_account"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

        <ImageView
            android:id="@+id/image_user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/image_user_avatar_margin_start"
            android:layout_marginTop="@dimen/image_user_avatar_margin_top"
            android:layout_marginEnd="@dimen/image_user_avatar_margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>