<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_sign_in_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/image_app_logo_margin_top"
                android:src="@drawable/logo_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_label_email"
                style="@style/BlueNormalTextStyle.Size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_label_email_margin_start"
                android:layout_marginTop="@dimen/text_label_email_margin_top"
                android:text="@string/hint_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_app_logo" />

            <EditText
                android:id="@+id/et_email"
                style="@style/PrimaryEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_email_margin_top"
                android:layout_marginEnd="@dimen/edit_email_margin_end"
                android:ems="10"
                android:hint="@string/hint_type_hear"
                android:inputType="textEmailAddress"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_label_email"
                app:layout_constraintTop_toBottomOf="@+id/text_label_email" />

            <TextView
                android:id="@+id/text_label_password"
                style="@style/BlueNormalTextStyle.Size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_label_password_margin_start"
                android:layout_marginTop="@dimen/text_label_password_margin_top"
                android:text="@string/hint_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_password"
                style="@style/PrimaryEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_password_margin_top"
                android:ems="10"
                android:hint="@string/hint_type_hear"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="@+id/et_email"
                app:layout_constraintStart_toStartOf="@+id/text_label_password"
                app:layout_constraintTop_toBottomOf="@+id/text_label_password" />

            <Button
                android:id="@+id/btn_signin"
                style="@style/PrimaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:stateListAnimator="@null"
                android:text="@string/signIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <TextView
                android:id="@+id/btn_forgotpassoword"
                style="@style/BlueNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_goto_forget_password_margin_start"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/text_goto_forget_password_margin_end"
                android:gravity="center"
                android:padding="@dimen/text_goto_forget_password_padding"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

            <TextView
                android:id="@+id/text_not_have_account"
                style="@style/textViewButtonStyle.size16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_not_have_account_margin_top"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="@dimen/layout_sign_in_text_not_have_account_padding"
                android:text="@string/not_have_account"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_forgotpassoword" />

            <TextView
                android:id="@+id/text_goto_sign_up"
                style="@style/textViewButtonStyle.size20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_goto_sign_up_margin_start"
                android:layout_marginTop="@dimen/text_goto_sign_up_margin_top"
                android:layout_marginEnd="@dimen/text_goto_sign_up_margin_end"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signUp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_not_have_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>