<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.registration.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_sign_in_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title1"
                style="@style/BlueBoldTextStyle.Size17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="Let’s get your business online!"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title2"
                style="@style/DarkGrayNormalTextStyle.Size14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:gravity="center"
                android:text="First, we will create your iQuote profile\n with your details."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title1" />

            <TextView
                android:id="@+id/text_title_first_name"
                style="@style/BlueNormalTextStyle.Size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Full Name*"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title2" />

            <EditText
                android:id="@+id/et_full_name"
                style="@style/PrimaryEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_type_hear"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_first_name" />

            <TextView
                android:id="@+id/text_title_email"
                style="@style/BlueNormalTextStyle.Size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/hint_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_full_name" />

            <EditText
                android:id="@+id/et_email"
                style="@style/PrimaryEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_type_hear"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_email"
                app:layout_constraintTop_toBottomOf="@+id/text_title_email" />

            <TextView
                android:id="@+id/text_title_contact_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_contact_number"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_last_name" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_contact_number"
                app:layout_constraintTop_toBottomOf="@+id/text_title_contact_number" />

            <TextView
                android:id="@+id/text_title_password"
                style="@style/BlueNormalTextStyle.Size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/hint_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_password"
                style="@style/PrimaryEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_type_hear"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_password"
                app:layout_constraintTop_toBottomOf="@+id/text_title_password" />

            <TextView
                android:id="@+id/text_label_submit"
                style="@style/DarkGrayNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="@string/label_agree"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <TextView
                android:id="@+id/tv_terms_condition"
                style="@style/BlueBoldTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_t_and_c"
                app:layout_constraintEnd_toStartOf="@+id/text_label_and"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_label_submit" />

            <TextView
                android:id="@+id/text_label_and"
                style="@style/DarkGrayNormalTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_and_start"
                android:layout_marginEnd="@dimen/text_and_end"
                android:text="@string/label_and"
                app:layout_constraintEnd_toStartOf="@+id/tv_privacy_policy"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_terms_condition"
                app:layout_constraintTop_toBottomOf="@+id/text_label_submit" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                style="@style/BlueBoldTextStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_label_and"
                app:layout_constraintTop_toBottomOf="@+id/text_label_submit" />

            <Button
                android:id="@+id/btn_create_account"
                style="@style/PrimaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_sign_up_registration_margin_start"
                android:layout_marginTop="@dimen/button_sign_up_registration_margin_top"
                android:layout_marginEnd="@dimen/button_sign_up_registration_margin_end"
                android:text="Create Account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_terms_condition" />

            <TextView
                android:id="@+id/text_label_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_account_margin_top"
                android:layout_marginBottom="@dimen/text_account_margin_bottom"
                android:text="@string/label_already_account"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_link_sign_in"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_create_account"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/text_link_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_sign_in_margin_start"
                android:layout_marginTop="@dimen/text_sign_in_margin_top"
                android:text="@string/label_signin"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_label_account"
                app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>